--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "rxjs": "^6.3.3",
         "rxjs-compat": "^6.3.2",
         "tooltip.js": "^1.2.0",
+        "zinfinitescroll": "^1.1.6",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
