--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
         "font-awesome": "^4.7.0",
         "fullcalendar": "^3.9.0",
         "fullcalendar-scheduler": "^1.9.4",
+        "google-calendar": "^1.3.2",
         "ionic-angular": "^3.9.2",
-        "jquery": "^3.3.1",
+        "jquery": "^3.4.1",
         "moment": "^2.22.1",
         "ngx-cacheable": "^1.0.6",
         "popper.js": "^1.14.3",
@@ -48,7 +49,7 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.8.3",
+        "@angular-devkit/build-angular": "^0.13.9",
         "@angular/cli": "^6.2.3",
         "@angular/compiler-cli": "^6.0.0",
         "@angular/language-service": "^6.0.0",
